--- a/zombienet/examples/oracle_rococo_local_network.toml
+++ b/zombienet/examples/oracle_rococo_local_network.toml
@@ -21,7 +21,7 @@ chain = "rococo-local"
 
 [[parachains]]
 id = 1013
-chain = "oracle-rococo"
+chain = "oracle-rococo-dev"
 cumulus_based = true
 
 	# run alice as parachain collator
