--- a/pallets/registry/Cargo.toml
+++ b/pallets/registry/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pallet-template"
-authors = ["Anonymous"]
-description = "FRAME pallet template for defining custom runtime logic."
+name = "pallet-registry"
+authors = ["Sylvain Cormier"]
+description = ""
 version = "0.1.0"
 license = "Unlicense"
 homepage = "https://substrate.io"
