--- a/runtime/paraxiom/Cargo.toml
+++ b/runtime/paraxiom/Cargo.toml
@@ -22,7 +22,7 @@ scale-info = { version = "2.3.1", default-features = false, features = ["derive"
 smallvec = "1.10.0"
 
 # Local
-pallet-registry = { path = "../pallets/registry", default-features = false }
+pallet-registry = { path = "../../pallets/registry", default-features = false }
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.36" }
