--- a/testnet/network.toml
+++ b/testnet/network.toml
@@ -27,3 +27,17 @@ rpc_port = 30488
 name = "node1"
 command = "../target/release/paraxiom"
 rpc_port = 30489
+
+[[parachains]]
+id = 200
+cumulus_based = true
+ [[parachains.collators]]
+name = "node2"
+command = "../target/release/paraxiom"
+rpc_port = 30488
+
+
+ [[parachains.collators]]
+name = "node1"
+command = "../target/release/paraxiom"
+rpc_port = 30489
