--- a/.github/workflows/clippy-and-fmt.yml
+++ b/.github/workflows/clippy-and-fmt.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  clippy-and-fmt:
 
     runs-on: ubuntu-latest
 
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: sudo apt install --assume-yes build-essential git clang curl libssl-dev protobuf-compiler
+    - name: Install toolchain
+      run: rustup default stable && rustup update && rustup update nightly && rustup target add wasm32-unknown-unknown --toolchain nightly
     - name: Build
       run: cargo +nightly clippy --verbose
     - name: Run tests
