--- a/.github/workflows/clippy-and-fmt.yml
+++ b/.github/workflows/clippy-and-fmt.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: sudo apt install --assume-yes build-essential git clang curl libssl-dev protobuf-compiler
     - name: Install toolchain
-      run: rustup default stable && rustup update && rustup update nightly && rustup target add wasm32-unknown-unknown --toolchain nightly
+      run: rustup default stable && rustup update && rustup update nightly && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
     - name: Run clippy
       run: cargo clippy --verbose
     - name: Run fmt
