--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -21,4 +21,4 @@ jobs:
     - name: Install toolchain
       run: rustup default stable && rustup update && rustup update nightly && rustup target add wasm32-unknown-unknown --toolchain nightly
     - name: Build
-      run: cargo +nightly build --verbose
+      run: cargo +nightly build
