--- a/.github/workflows/clippy-and-fmt.yml
+++ b/.github/workflows/clippy-and-fmt.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Clippy and Fmt
 
 on:
   push:
@@ -19,8 +19,8 @@ jobs:
     - name: Install dependencies
       run: sudo apt install --assume-yes build-essential git clang curl libssl-dev protobuf-compiler
     - name: Install toolchain
-      run: rustup default stable && rustup update && rustup update nightly && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
+      run: rustup default stable && rustup toolchain install nightly-2023-03-09 && rustup default nightly-2023-03-09 && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
     - name: Run clippy
-      run: cargo clippy --verbose
+      run: cargo clippy
     - name: Run fmt
-      run: cargo +nightly fmt --verbose
+      run: cargo +nightly fmt
