--- a/.github/workflows/clippy-and-fmt.yml
+++ b/.github/workflows/clippy-and-fmt.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: sudo apt install --assume-yes build-essential git clang curl libssl-dev protobuf-compiler
     - name: Install toolchain
-      run: rustup default stable && rustup toolchain install nightly-2023-03-09 && rustup default nightly-2023-03-09 && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
+      run: rustup default stable && rustup toolchain install nightly-2023-03-09 && rustup default nightly-2023-03-09 && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu && rustup component add rustfmt --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
     - name: Run fmt
       run: cargo +nightly fmt
     - name: Run clippy
