Feature: complete Registry pallet implementation (#5)
* Add MaxStringSize as const to runtime/registry

* Use config types; general organization; add status field to ApiFeed

* refactor unregister_feed() extrinsic

* edit comments

* Add RegistryFeedKey as a new type for feed keys

* add a separate types file for registry pallet

* remove commented out code

* updated authors

* added path to ApiFeed struct + associated config type

* variable renaming and minor edits

--- a/pallets/registry/Cargo.toml
+++ b/pallets/registry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-registry"
-authors = ["Sylvain Cormier"]
+authors = ["Sylvain Cormier", "Faisal Al-Tameemi", "Arthur F.M."]
 description = ""
 version = "0.1.0"
 license = "Unlicense"
