--- a/pallets/oracle/Cargo.toml
+++ b/pallets/oracle/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
-authors = ["Phala Network"]
-edition = "2021"
-name = "phat-offchain-rollup"
+name = "pallet-oracle"
 version = "0.1.0"
-license = "Apache 2.0"
-homepage = "https://phala.network/"
-repository = "https://github.com/Phala-Network/phala-blockchain"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive", "max-encoded-len"] }
 scale-info = { version = "2.1", default-features = false, features = ["derive"] }
-
 primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "byteorder"] }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
@@ -24,9 +21,11 @@ sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-
 sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
 log = { version = "0.4.14", default-features = false }
-
 hex = { version = "0.4", default-features = false }
 hex-literal = "0.4.1"
+
+# Local
+phat-offchain-rollup = { path = "../../pallets/offchain-rollup", default-features = false }
 
 [dev-dependencies]
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
@@ -50,6 +49,7 @@ std = [
 	"frame-benchmarking/std",
 	"log/std",
     "primitive-types/std",
+	"phat-offchain-rollup/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks"
