--- a/.github/workflows/clippy-and-fmt.yml
+++ b/.github/workflows/clippy-and-fmt.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Install toolchain
       run: rustup default stable && rustup toolchain install nightly-2023-03-09 && rustup default nightly-2023-03-09 && rustup component add clippy --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu && rustup component add rustfmt --toolchain nightly-2023-03-09-x86_64-unknown-linux-gnu
     - name: Run fmt
-      run: cargo +nightly fmt
+      run: cargo +nightly-2023-03-09 fmt
     - name: Run clippy
       run: cargo clippy
