--- a/runtime/paraxiom/Cargo.toml
+++ b/runtime/paraxiom/Cargo.toml
@@ -25,6 +25,7 @@ smallvec = "1.10.0"
 pallet-registry = { path = "../../pallets/registry", default-features = false }
 phat-offchain-rollup = { path = "../../pallets/offchain-rollup", default-features = false }
 pallet-oracle = { path = "../../pallets/oracle", default-features = false }
+para-democracy = { path = "../../pallets/para-democracy", default-features = false }
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
@@ -37,6 +38,9 @@ frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-f
 pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
@@ -136,6 +140,9 @@ std = [
 	"xcm-executor/std",
 	"xcm/std",
 	"pallet-registry/std",
+	"pallet-democracy/std",
+	"pallet-preimage/std",
+	"pallet-scheduler/std",
 	"pallet-oracle/std",
 ]
 
@@ -154,6 +161,7 @@ runtime-benchmarks = [
 	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
 	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
 	"pallet-registry/runtime-benchmarks",
+	"pallet-democracy/runtime-benchmarks",
 	#"pallet-oracle/runtime-benchmarks",
 ]
 
@@ -177,5 +185,6 @@ try-runtime = [
 	"pallet-xcm/try-runtime",
 	"parachain-info/try-runtime",
 	"pallet-registry/try-runtime",
+	"pallet-democracy/try-runtime",
 	"pallet-oracle/try-runtime",
 ]
