Feat: Oracle phat contract (#6)
* checkpoint

* reorganize /phat directory and update contract deps

* compile contracts using @devphase/cli

* added Jest for unit tests

* cleanup + add documentation

* update contract names

* Edit phat/README.md

* update typings + delete local_scheduler

* add contracts-overview image

* update phat/README.md

* Update Cargo.toml

* Update types.rs

* Update lib.rs

* misc

* remove extra artifacts

* remove phat/images

--- a/phat/Cargo.toml
+++ b/phat/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
-    "contracts/*",
+    "contracts/phat_oracle",
+    "contracts/phat_oracle_feed"
 ]
 
 # Sneak peek of the new test engine!
