--- a/phat/package.json
+++ b/phat/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "paraxiom-phat",
+  "name": "paraxiom-phat-contracts",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "author": {
+    "name": "FaisalAl-Tameemi",
+    "email": "faisal.al.tameemi@gmail.com"
+  },
   "dependencies": {
-    "devphase": "^0.2.2",
+    "@devphase/cli": "^0.2.1",
+    "@devphase/service": "^0.2.1",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "test": "npx @devphase/cli contract test",
+    "test:cargo": "cargo test"
   }
 }
