--- a/phat/tsconfig.json
+++ b/phat/tsconfig.json
@@ -4,25 +4,31 @@
         "module": "commonjs",
         "lib": ["esnext"],
         "moduleResolution": "node",
+
         "outDir": "./build",
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "removeComments": true,
         "declaration": true,
+
         "strict": true,
         "noImplicitAny": false,
         "noImplicitThis": true,
         "noImplicitReturns": true,
         "strictNullChecks": false,
         "strictPropertyInitialization": false,
+
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+
+        
         "baseUrl": ".",
         "paths": {
             "@/*": [ "./*", ]
         }
     },
     "include": [
+        "scripts/*",
         "tests/*",
         "typings/*"
     ],
